@@ -25,21 +25,19 @@ function init_mbstrings() {
 
 	if (version_compare(PHP_VERSION, '5.6', '<')) {
 		ini_set('mbstring.internal_encoding', 'UTF-8');
-		$res &= (ini_get('mbstring.internal_encoding') == 'UTF-8');
-	} else {
-		// it may be necessary to check / set php.internal encoding too after 5.6 is released, see ZBX-8278
+		$res &= (ini_get('mbstring.internal_encoding') === 'UTF-8');
+	}
+	else {
 		ini_set('default_charset', 'UTF-8');
-		$res &= (ini_get('default_charset') == 'UTF-8');
+		$res &= (ini_get('default_charset') === 'UTF-8');
 	}
 
 	ini_set('mbstring.detect_order', 'UTF-8, ISO-8859-1, JIS, SJIS');
 	$res &= (ini_get('mbstring.detect_order') === 'UTF-8, ISO-8859-1, JIS, SJIS');
 
-
 	return $res;
 }
 
-/**
 /**
  * Returns a list of all used locales.
  *
